# LibrarySystem

./: CMakeLists.txt  README.md  Untitled.md  build.sh
header/: database.h  sha256.h  utils.h
src/: database.cpp  main.cpp  sha256.cpp
